--- a/jgclark.Dashboard/src/react/components/Header/Header.css
+++ b/jgclark.Dashboard/src/react/components/Header/Header.css
@@ -1,21 +1,22 @@
 /* CSS specific to Header component from jgclark.Dashboard plugin */
-/* Last updated 2024-08-05 for v2.1.0.a4 by @jgclark */
+/* Last updated 2024-08-26 for v2.1.0.a9 by @jgclark */
+/* Note: until 2.1.0.a8 was grid-based. But from a9 realised that flex is the natural, and thus easier, tool to use. */
 
-/* Settings for Grid-based layout */
+/* Settings for flex-based layout */
 .header {
 	font-size: 0.92rem;
 	/* Define grid-template-areas for better control */
-	display: grid;
+	/* display: grid; */
+	display: flex;
 	/* Allocate space for each area */
-	grid-template-areas: "refresh lastUpdated counts empty perspective dropdowns";
-	grid-template-columns: max-content max-content max-content 1fr max-content min-content;
+	/* grid-template-areas: "perspective refresh lastUpdated empty1 counts empty2 dropdowns";
+	grid-template-columns: max-content max-content max-content 1fr max-content 2fr min-content; */
 	/* Vertical alignment */
 	align-items: baseline;
 	/* Space between grid items */
-	gap: 0.5rem;
+	gap: 0.75rem;
 	/* Padding around the header content */
-	padding: 0.4rem 0.8rem 0.4rem 0.6rem;
-	padding-right: 1rem;
+	padding: 0.4rem 1.0rem 0.4rem 0.5rem;
 	background-color: var(--bg-sidebar-color);
 	/* Ensure the header uses the full width -- if contained width:Nvw set to less than 100 */
 	/* width: 100%; */
@@ -27,77 +28,79 @@
 
 	/* Style for combobox-container */
 	.combobox-container {
-			display: flex;
-			flex-direction: column;
+		display: flex;
+		flex-direction: column;
+		padding-top: 1px;
 	}
 
 	/* Style for combobox-container (compact version) */
 	.combobox-container-compact {
-			display: flex;
-			flex-direction: row;
-			align-items: center;
-			gap: 0.4rem;
+		display: flex;
+		flex-direction: row;
+		align-items: baseline;
+		gap: 0.4rem;
+		padding-top: 1px;
 	}
 
 	.combobox-wrapper {
-			display: flex;
-			align-items: end;
-			gap: 10px;
-			position: relative;
-			width: fit-content;
+		display: flex;
+		align-items: end;
+		gap: 10px;
+		position: relative;
+		width: fit-content;
 	}
 
 	.combobox-label {
-			font-weight: 500;
-			color: var(--fg-alt-color);
+		font-weight: 500;
+		color: var(--fg-alt-color);
 	}
 
 	.combobox-input {
-			flex: 1;
-			padding: 3px 6px;
-			border: 0.5px solid rgb(from var(--fg-main-color) r g b / 0.3);
-			border-radius: 4px;
-			font-size: 0.9rem;
-			/* width: 100%; */
+		flex: 1;
+		padding: 3px 6px 1px;
+		border: 0.5px solid rgb(from var(--fg-main-color) r g b / 0.3);
+		border-radius: 4px;
+		font-size: 0.9rem;
+		/* width: 100%; */
 	}
 
 	.combobox-input:focus {
-			border-color: var(--hashtag-color);
-			outline: none;
-			box-shadow: 0 0 3px var(--hashtag-color);
+		border-color: var(--hashtag-color);
+		outline: none;
+		box-shadow: 0 0 3px var(--hashtag-color);
 	}
 
 	.combobox-arrow {
-			position: absolute;
-			right: 0.4rem;
-			pointer-events: none;
-			font-size: larger;
-			color: var(--tint-color);
-			align-self: center;
+		position: absolute;
+		right: 0.4rem;
+		pointer-events: none;
+		font-size: larger;
+		color: var(--tint-color);
+		align-self: center;
 	}
 
 	.combobox-dropdown {
-			position: absolute;
-			top: 100%;
-			left: 0;
-			right: 0;
-			border: 1px solid var(--divider-color);
-			border-radius: 4px;
+		position: absolute;
+		top: 100%;
+		left: 0;
+		right: 0;
+		border: 1px solid var(--divider-color);
+		border-radius: 4px;
 
-			/* background-color: var(--bg-main-color); */
-			/* set button/input backgrounds a little lighter */
-			background-color: hsl(from var(--bg-sidebar-color) h s calc(l*1.4));
+		/* background-color: var(--bg-main-color); */
+		/* set button/input backgrounds a little lighter */
+		background-color: hsl(from var(--bg-sidebar-color) h s calc(l*1.4));
 
-			box-shadow: 0 2px 5px var(--divider-color);
-			z-index: 5;
+		box-shadow: 0 2px 5px var(--divider-color);
+		z-index: 5;
 	}
 
 	.combobox-option {
-			cursor: pointer;
-			color: var(--fg-main-color);
-			padding: 0.2rem 0rem 0.2rem 0.4rem;
-			min-height: 0.9rem;
-			/* transition: background-color 0.2s; */
+		cursor: pointer;
+		color: var(--fg-main-color);
+		padding: 0.2rem 0rem 0.2rem 0.4rem;
+		min-height: 0.9rem;
+		/* transition: background-color 0.2s; */
 	}
 
 	.combobox-option:hover {
@@ -116,11 +119,12 @@
 
 .lastFullRefresh {
 	/* Assign the area */
-	grid-area: lastUpdated;
+	/* grid-area: lastUpdated; */
 	/* This ensures that the content of these divs is also centered */
+	flex-grow: 1;
 	align-items: center;
 	/* Make a fixed width so that as it changes it doesn't change the Refresh button position */
-	width: 9rem;
+	/* width: 9rem; */
 
 }
 /* Turn fixed width off on narrow screens */
@@ -132,28 +136,31 @@
 
 .refresh {
 	/* Assign the area */
-	grid-area: refresh;
+	/* grid-area: refresh; */
 }
 
 /* may use in future */
 .totalCounts {
 	/* Assign the area */
-	grid-area: counts;
-	align-self: unset; /* TEST: shouldn't be needed but otherwise lands up with 'end' */
-	
+	/* grid-area: counts; */
+	/* align-self: unset; TEST: shouldn't be needed but otherwise lands up with 'end' */
+	flex-grow: 1;
+
 	/* Make sure totalCounts only shows when necessary */
-	@media screen and (max-width: 500px) {
+	@media screen and (max-width: 600px) {
 		display: none;
 	}
 }
 
 .perspectiveName {
 	/* Assign the area */
-	grid-area: perspective;
+	/* grid-area: perspective; */
+	align-self: center;
 }
 
 .dropdownButtons {
-	grid-area: dropdowns;
+	/* grid-area: dropdowns; */
+	display: flex;
 	/* justify-self: end; */
 	/* gap between buttons */
 	gap: 0.9rem;
