--- a/jgclark.Dashboard/src/react/css/SettingsDialog.css
+++ b/jgclark.Dashboard/src/react/css/SettingsDialog.css
@@ -1,5 +1,5 @@
 /* CSS specific to Settings Dialog from jgclark.Dashboard plugin */
-/* Last updated 2024-08-15 for v2.1.0.a8 by @jgclark */
+/* Last updated 2024-08-26 for v2.1.0.a9 by @jgclark */
 
 /* Style for the settings dialog */
 .settings-dialog {
@@ -40,7 +40,7 @@
         font-size: small;
         color: var(--fg-alt-color);
         margin: 0 0 0.4rem 0;
-        opacity: 0.8;
+        /* opacity: 0.8; */
     }
 
     /* override default for hr */
@@ -165,7 +165,7 @@
     }
 
     .input-box-input {
-        padding: 4px 8px;
+        padding: 3px 6px 2px;
         border: 0.5px solid rgb(from var(--fg-main-color) r g b / 0.3);
         background-color: var(--bg-main-color);
         border-radius: 4px;
@@ -173,6 +173,7 @@
         font-size: 0.85rem;
         /* vertical spacing above and below */
         margin: 0.3rem 0rem;
+        margin: 0.2rem 0rem;
         /* fill rest of width in compact or normal mode */
         width: 100%;
     }
@@ -243,13 +244,14 @@
         flex-direction: row;
         align-items: baseline;
         gap: 0.5rem;
+        margin-bottom: 0.3rem;
     }
 
     .combobox-wrapper {
         display: flex;
-        align-items: end;
+        /* align-items: end; */
         gap: 10px;
-        position: relative;
+        /* position: relative; */
         width: fit-content;
     }
 
@@ -257,12 +259,11 @@
         font-weight: 500;
         color: var(--fg-alt-color);
         margin-right: 0.1rem;
-        margin-bottom: 0.3rem;
     }
 
     .combobox-input {
         flex: 1;
-        padding: 4px 8px;
+        padding: 3px 6px 2px;
         background-color: var(--bg-main-color);
         border: 0.5px solid rgb(from var(--fg-main-color) r g b / 0.3);
         border-radius: 4px;
@@ -373,6 +374,16 @@
     color: var(--tint-color);
     padding-top: 0.3rem;
     padding-bottom: 0.2rem;
+}
+
+/* Make disabled settings lower opacity */
+.disabled {
+    opacity: 0.6;
+}
+
+/* Make settings that depend on another slightly indented */
+.indent {
+    margin-left: 1rem;
 }
 
 /* iOS-specific settings */
