--- a/jgclark.Dashboard/src/react/css/dashboard.css
+++ b/jgclark.Dashboard/src/react/css/dashboard.css
@@ -1,5 +1,5 @@
 /* CSS specific to showDashboard() from jgclark.Dashboard plugin */
-/* Last updated 2024-07-17 for v2.0.3 by @jgclark */
+/* Last updated 2024-08-25 for v2.1.0.a9 by @jgclark */
 
 :root {	font-size: 16px; /* this works */
 	/* For MESSAGE_BANNER: Override w3.css which seems to take precedence for reasons unknown */
@@ -129,7 +129,6 @@ dialog::backdrop {
 
 /* Inner grid for details of a section */
 .sectionItemsGrid {
-	padding-inline-start: 0.3rem;
 	font-size: 1.0rem;
 	/* allow multi-column flow: set max columns and min width, and some other bits and pieces. Reference: https://drafts.csswg.org/css-multicol/#the-multi-column-model */
 	column-count: 3;
@@ -138,6 +137,7 @@ dialog::backdrop {
 	/* column-gap: 1rem; */
 	column-rule: 1px dotted var(--tint-color);
 	column-fill: auto;
+	padding-inline-start: 2px;
 	padding-block-start: 4px;
 	padding-block-end: 4px;
 }
@@ -165,23 +165,6 @@ dialog::backdrop {
 	opacity: 1; 
 	transition: opacity 500ms ease-in-out;
 	*/
-}
-
-/* General item icon details */
-/* Need to override some CSS that comes in the theme */
-.itemIcon {
-	color: var(--item-icon-color);
-	margin-bottom: unset !important;
-	line-height: unset !important;
-	font-size: 1.0rem  !important;
-	/* font-size: unset !important; */
-	font-weight: 400;
-	/* position this horizontally centred; vertically at start */
-	align-self: center;
-	justify-self: center;
-	/* and give a little nudge down to make things line up in practice */
-	padding-block-start: 1px;
-	cursor: pointer;
 }
 
 /* The actual item's details (was col4) */
@@ -231,20 +214,45 @@ dialog::backdrop {
 	}
 }
 
+.projectProgress {
+	font-size: 0.9rem;
+}
+
 /* ------------------------------------------------------------------ */
 
-/* Specific item icon details */
+/* Various item icons */
+
 /* Need to override some CSS that comes in the theme */
-/* TODO: fix this being too large */
-.projectIcon {
+.itemIcon {
+	color: var(--item-icon-color);
 	margin-bottom: unset !important;
 	line-height: unset !important;
-	font-size: 0.7rem !important;
-	height: 0.7rem;
-	width: 0.7rem;
-	line-height: 1.1rem;
+	font-size: 1.0rem  !important;
+	/* font-size: unset !important; */
+	font-weight: 400;
+	/* position this horizontally centred; vertically at start */
 	align-self: center;
 	justify-self: center;
+	/* and give a little nudge down to make things line up in practice */
+	padding-block-start: 1px;
+	cursor: pointer;
+}
+
+.projectIcon {
+	/* less to do as this is SVG not text */
+	/* margin-bottom: unset !important; */
+	/* line-height: unset !important; */
+	/* font-size: 0.7rem !important; */
+	/* height: 0.7rem;
+	width: 0.7rem; */
+	/* height: 1.1rem;
+	width: 1.1rem; */
+	/* line-height: 1.1rem; */
+	/* align-self: center; */
+	align-self: start;
+	justify-self: center;
+	/* and give a little nudge down to make things line up in practice */
+	margin-block-start: 2px;
 }
 
 .dialogTrigger {
