--- a/jgclark.Dashboard/src/react/components/Modal/Modal.css
+++ b/jgclark.Dashboard/src/react/components/Modal/Modal.css
@@ -8,5 +8,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 100;
+  z-index: 100; /* backdrop layer */
+}
+
+.modal-backdrop > div {
+  z-index: 101; /* any content nested inside the backdrop is on top of backdrop */
 }
