--- a/jgclark.Dashboard/src/react/css/dashboard.css
+++ b/jgclark.Dashboard/src/react/css/dashboard.css
@@ -325,56 +325,57 @@ button,
 }
 
 /* --------------------------------------------------------------- */
+/* Tooltips should render on macOS only */
+.macOS {
+	/* Add tooltips to these buttons, using CSS-only technique at https://www.youtube.com/watch?v=M4lQwiUvGlY&t=157s */
+	.tooltip {
+		position: relative;
+		/* float above everything, including the header */
+		/* z-index: 20; */
+	}
 
-/* Add tooltips to these buttons, using CSS-only technique at https://www.youtube.com/watch?v=M4lQwiUvGlY&t=157s */
-.tooltip {
-	position: relative;
-	/* float above everything, including the header */
-	/* z-index: 20; */
+	.tooltip::before,
+	.tooltip::after {
+		position: absolute;
+		left: 50%;
+		/* opacity:0;  -- problem is that this interferes with cursor selection because it still grabs cursor -- so switching to display: instead */
+		display: none;
+		transition: all ease 0.3s;
+		transition-delay: 0.8;
+	}
+
+	/* Set tooltip little triangle */
+	.tooltip::before {
+		content: "";
+		border-width: 10px 8px 0 8px;
+		border-style: solid;
+		border-color: var(--tint-color) transparent transparent transparent;
+		margin-left: -8px;
+		top: -12px;
+	}
+
+	/* Set main tooltip display area */
+	.tooltip::after {
+		content: attr(data-tooltip);
+		margin-left: -10px;
+		padding: 0.15rem 0.25rem;
+		top: -12px;
+		font-size: 0.85rem;
+		color: var(--fg-main-color);
+		background: var(--bg-main-color);
+		border: 1px solid var(--tint-color);
+		border-radius: 6px;
+		transform: translateY(-100%);
+		cursor: help;
+	}
+
+	.tooltip:hover::before,
+	.tooltip:hover::after {
+		/* opacity: 1; */
+		display: block;
+		z-index: 20;
+	}
 }
-
-.tooltip::before,
-.tooltip::after {
-	position: absolute;
-	left: 50%;
-	/* opacity:0;  -- problem is that this interferes with cursor selection because it still grabs cursor -- so switching to display: instead */
-	display: none;
-	transition: all ease 0.3s;
-	transition-delay: 0.8;
-}
-
-/* Set tooltip little triangle */
-.tooltip::before {
-	content: "";
-	border-width: 10px 8px 0 8px;
-	border-style: solid;
-	border-color: var(--tint-color) transparent transparent transparent;
-	margin-left: -8px;
-	top: -12px;
-}
-
-/* Set main tooltip display area */
-.tooltip::after {
-	content: attr(data-tooltip);
-	margin-left: -10px;
-	padding: 0.15rem 0.25rem;
-	top: -12px;
-	font-size: 0.85rem;
-	color: var(--fg-main-color);
-	background: var(--bg-main-color);
-	border: 1px solid var(--tint-color);
-	border-radius: 6px;
-	transform: translateY(-100%);
-	cursor: help;
-}
-
-.tooltip:hover::before,
-.tooltip:hover::after {
-	/* opacity: 1; */
-	display: block;
-	z-index: 20;
-}
-
 /* ------------------------------------------------------------------ */
 
 /* show as italic. Note: now unused */
