--- a/jgclark.Dashboard/src/react/css/dashboardDialog.css
+++ b/jgclark.Dashboard/src/react/css/dashboardDialog.css
@@ -34,7 +34,7 @@ dialog:modal {
   grid-template-columns: max-content auto max-content;
   /* vertically align content items in center */
   align-items: center; 
-  gap: 0.5rem;
+  /* gap: 0.5rem; */
 }
 
 /* icons in title */
@@ -110,7 +110,7 @@ dialog:modal {
   border-radius: 4px;
   padding: 1px 4px 0px 4px;
   /* have margin to the right+top+bottom of buttons */
-  margin: 3px 4px 3px 0px;
+  margin: 0.2rem 0.3rem 0.2rem 0; /* 3px 4px 3px 0px; */
 }
 /* set FontAwesome icon colour to tint color */
 .dialogBody button i {
@@ -122,13 +122,13 @@ dialog:modal {
 }
 
 .fullTextInput {
-  width: calc(100% - 6rem); /* allow space for icon before and button after */
+  width: -webkit-fill-available; /* calc(100% - 3rem); */
   font-size: 0.9rem;
   font-weight: 600;
   padding: 1px 4px 1px 4px;
   border: 1px solid var(--divider-color);
   border-radius: 4px;
-  margin-left: 0.3rem;
+  /* margin-left: 0.3rem; */
   margin-right: 0.3rem;
 }
 
@@ -151,6 +151,11 @@ dialog:modal {
 .fullTextArea .placeholder {
   color: #aaa;
   pointer-events: none; /* Prevent placeholder text from being selectable */
+}
+
+.childDetails {
+  font-size: 0.9rem;
+  padding-left: 0.5rem;
 }
 
 .closeButton {
@@ -178,7 +183,6 @@ dialog:modal {
   margin-top: 2px;
 }
 
-
 /* iOS devices require an override for font size, otherwise it does a nasty zoom in effect 
  * discovered via https://stackoverflow.com/questions/68973232/how-to-handle-safari-ios-zoom-on-input-fields/69125139#69125139
  * PS Apple says user-scalable, min-scale and max-scale settings are ignored: https://webkit.org/blog/7367/new-interaction-behaviors-in-ios-10/ 
@@ -195,3 +199,8 @@ dialog:modal {
     left: 5%;
   }
 } */
+
+/* Override items from main Dashboard.css for slightly different context this is used */
+.projectIcon {
+	margin-block-start: 3px !important;
+}
