--- a/jgclark.Dashboard/src/react/css/dashboard.css
+++ b/jgclark.Dashboard/src/react/css/dashboard.css
@@ -1,7 +1,8 @@
 /* CSS specific to showDashboard() from jgclark.Dashboard plugin */
-/* Last updated 2024-09-18 for v2.1.0.a11 by @jgclark */
+/* Last updated 2024-09-20 for v2.1.0.a12 by @jgclark */
 
-:root {	font-size: 16px; /* this works */
+:root {	
+	font-size: 16px; /* this works */
 	/* For MESSAGE_BANNER: Override w3.css which seems to take precedence for reasons unknown */
 	.w3-panel {
 		margin-top: 0px;
@@ -13,10 +14,10 @@
 	}
 }
 
-/* TEST: for subtle colouring */
 html {
-	--bg-error-color: color-mix(in oklch, var(--bg-main-color), red 20%);
-	--bg-ok-color: color-mix(in oklch, var(--bg-main-color), green 20%);
+	--itemIndentWidth: 1.4rem;
+	--bg-error-color: color-mix(in oklch, var(--bg-main-color), red 20%); /* TEST: for subtle colouring */
+	--bg-ok-color: color-mix(in oklch, var(--bg-main-color), green 20%); /* TEST: for subtle colouring */
 }
 
 html,
@@ -137,21 +138,21 @@ dialog::backdrop {
 	/* column-gap: 1rem; */
 	column-rule: 1px dotted var(--tint-color);
 	column-fill: auto;
-	padding-inline-start: 2px;
-	padding-block-start: 4px;
-	padding-block-end: 4px;
+	padding-inline-start: 0.3rem; /* 2px; */
+	padding-block-start: 0.3rem; /* 4px; */
+	padding-block-end: 0.2rem; /* 4px; */
 }
 
 .sectionItemRow {
 	/* The important trick to avoiding bad wrapping at end of columns */
 	break-inside: avoid;
-	display: grid;
-	grid-template-columns: [icon] 1.1rem [item-details] auto;
-	/* was: minmax(20rem, 30rem); */
+	/* display: grid; */
+	/* grid-template-columns: [icon] 1.1rem [item-details] auto; */
+	display: flex;
 	/* no bottom padding */
-	padding: 3px 4px 0px 2px;
+	padding: 3px 4px 0px 0px;
 	border: 0px none;
-	column-gap: 2px;
+	column-gap: 3px;
 	/* vertical in containing block */
 	align-self: start;
 	/* horizontal in containing block */
@@ -207,11 +208,6 @@ dialog::backdrop {
 		/* some padding to right */
 		padding-right: 0.5rem;
 	}
-
-	.sectionItemRow {
-		padding: 3px 4px 0px 4px;
-		column-gap: 0px;
-	}
 }
 
 .projectProgress {
@@ -239,19 +235,12 @@ dialog::backdrop {
 
 .projectIcon {
 	/* less to do as this is SVG not text */
-	/* margin-bottom: unset !important; */
-	/* line-height: unset !important; */
-	/* font-size: 0.7rem !important; */
-	/* height: 0.7rem;
-	width: 0.7rem; */
-	/* height: 1.1rem;
-	width: 1.1rem; */
-	/* line-height: 1.1rem; */
-	/* align-self: center; */
+	/* align-self: center; -- would have worked when a single line, but it can now have progress text */
 	align-self: start;
 	justify-self: center;
 	/* and give a little nudge down to make things line up in practice */
 	margin-block-start: 2px;
+	margin-right: 2px;
 }
 
 .dialogTriggerIcon {
@@ -265,6 +254,11 @@ dialog::backdrop {
 	color: var(--fg-main-color);
 	opacity: 0.5;
 }
+
+/* I'm not sure how to send a variable through into this calculation, so this is moved into the code */
+/* .indentItem {
+	padding-left: calc(1 * 1.35rem);
+} */
 
 /* --------------------------------------------------------------- */
 
@@ -393,9 +387,19 @@ button,
 	padding-left: 0.3rem !important;
 }
 
+.pad-left-larger {
+	/* add space before something (normally an icon) */
+	padding-left: 0.5rem !important;
+}
+
 .pad-right {
 	/* add space after something (normally an icon) */
 	padding-right: 0.3em !important;
+}
+
+.pad-right-larger {
+	/* add space after something (normally an icon) */
+	padding-right: 0.5em !important;
 }
 
 .space-under {
@@ -469,27 +473,27 @@ button,
 /* Some headings specified from measuring the colour of NP sidebar elements */
 /* TODO: move the font-size somewhere more sensible */
 .sidebarDaily {
-	font-size: 1.0rem;
+	/* font-size: 1.0rem; */
 	color: #d0703c;
 }
 
 .sidebarWeekly {
-	font-size: 1.0rem;
+	/* font-size: 1.0rem; */
 	color: #be23b6;
 }
 
 .sidebarMonthly {
-	font-size: 1.0rem;
+	/* font-size: 1.0rem; */
 	color: #f5528b;
 }
 
 .sidebarQuarterly {
-	font-size: 1.0rem;
+	/* font-size: 1.0rem; */
 	color: #e08008;
 }
 
 .sidebarYearly {
-	font-size: 1.0rem;
+	/* font-size: 1.0rem; */
 	color: #efba13;
 }
 
@@ -508,6 +512,7 @@ button,
 	color: var(--item-icon-color);
 }
 
+/* TODO: is this used? */
 #error {
 	background-color: red;
 	padding-left: 10px;
